@@ -119,6 +119,12 @@
 			<RegExp input="$INFO[plotsource]" output="&lt;chain function=&quot;GetTMDBLangPlotByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression>themoviedb.org</expression>
 			</RegExp>
+			<RegExp input="$INFO[taglinesource]" output="&lt;chain function=&quot;GetIMDBTaglineById&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+				<expression>IMDb</expression>
+			</RegExp>
+			<RegExp input="$INFO[taglinesource]" output="&lt;chain function=&quot;GetTMDBLangTaglineByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+				<expression>themoviedb.org</expression>
+			</RegExp>
 			<RegExp input="$INFO[plotsource]" output="&lt;chain function=&quot;GetRTPlotById&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression>Rotten Tomatoes</expression>
 			</RegExp>
