@@ -1,3 +1,6 @@
+[B]1.6.0[/B]
+- added: option to select tagline source
+
 [B]1.5.0[/B]
 - added: option to select preferred trailer language
 
